fix spacing issue

--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,7 @@ a {
 	width: 100%;
 	height: 430px;
 	border-top: 2px solid #D9DFE5;
+	margin-bottom: 50px;
 }
 
 .donut-chart {
@@ -345,7 +346,7 @@ a {
 	color: #fff;
 	font-size: 18px;
 	height: 65px;
-	margin-top: 40px;
+	margin-top: 60px;
 	margin: 0;
 	padding-top: 20px;
 	width: 100%;
